Added additional routes and fixed some broken tests
